# hirag-haystack

./: .env.example  .gitignore  CLAUDE.md  README.md  VISUALIZATION_README.md  pyproject.toml  test_doc_id.py
examples/: advanced_queries.py  basic_usage.py  demo_usage.py  visualizations.py
hirag_haystack/: __init__.py  cli.py  document_loader.py
hirag_haystack/api/: __init__.py  app.py  dependencies.py  models.py  routes_hirag.py  routes_openai.py  streaming.py
hirag_haystack/components/: __init__.py  entity_extractor.py  graph_visualizer.py  hierarchical_entity_extractor.py  hierarchical_retriever.py  path_finder.py  report_generator.py
hirag_haystack/pipelines/: indexing.py  query.py
hirag_haystack/stores/: __init__.py  vector_store.py
hirag_haystack/utils/: color_utils.py
